# cmake-playground

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakeLists_8txt.html  LICENSE  MathUtilTest_8cpp.html  MathUtilTest_8cpp__incl.map  MathUtilTest_8cpp__incl.md5  MathUtil_8cpp.html  MathUtil_8cpp__incl.map  MathUtil_8cpp__incl.md5  MathUtil_8hpp.html  MathUtil_8hpp__dep__incl.map  MathUtil_8hpp__dep__incl.md5  MathUtil_8hpp__incl.map  MathUtil_8hpp__incl.md5  MathUtil_8hpp_source.html  README.md  StringUtilTest_8cpp.html  StringUtilTest_8cpp__incl.map  StringUtilTest_8cpp__incl.md5  StringUtil_8cpp.html  StringUtil_8cpp__incl.map  StringUtil_8cpp__incl.md5  StringUtil_8hpp.html  StringUtil_8hpp__dep__incl.map  StringUtil_8hpp__dep__incl.md5  StringUtil_8hpp__incl.map  StringUtil_8hpp__incl.md5  StringUtil_8hpp_source.html  annotated.html  classes.html  classo__lukas_1_1MathUtils_1_1MathUtil-members.html  classo__lukas_1_1MathUtils_1_1MathUtil.html  classo__lukas_1_1StringUtils_1_1StringUtil-members.html  classo__lukas_1_1StringUtils_1_1StringUtil.html  cli_2CMakeLists_8txt.html  (+79 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bump-release.yml  cmake-multi-platform.yml  deploy-documentation.yml  pr-bump-preview.yml  sonarqube-scan.yml
cmake/: Config.cmake.in  GenerateVersion.cmake
conan/: ConanFileAdditional.py
conan/test-package/: CMakeLists.txt  TestPackage.cpp  conanfile.py
search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/exe/: CMakeLists.txt
src/exe/src/: main.cpp
src/lib/: CMakeLists.txt
src/lib/include/o-lukas/LibraryPlayground/: StringUtil.hpp
src/lib/src/: StringUtil.cpp
src/lib/test/src/: StringUtilTest.cpp
src/math/: CMakeLists.txt
src/math/include/o-lukas/MathUtils/: MathUtil.hpp
src/math/src/: MathUtil.cpp
src/math/test/: CMakeLists.txt
src/math/test/src/: MathUtilTest.cpp
src/string/: CMakeLists.txt
src/string/include/o-lukas/StringUtils/: StringUtil.hpp
src/string/src/: StringUtil.cpp
src/string/test/: CMakeLists.txt
src/string/test/src/: StringUtilTest.cpp
src/tests/: CMakeLists.txt
src/tests/src/: StringUtilTest.cpp
