cmake_minimum_required(VERSION 3.24)

include(cmake/GenerateVersion.cmake)

project(CMakePlayground LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(CTest)
include(GNUInstallDirs)

find_program(CLANG_TIDY_EXECUTABLE clang-tidy)
if(CLANG_TIDY_EXECUTABLE)
    set(CMAKE_CXX_CLANG_TIDY "${CLANG_TIDY_EXECUTABLE};-config-file=${CMAKE_SOURCE_DIR}/.clang-tidy")
else()
    message(WARNING "Clang-Tidy executable not found. Static analysis will be disabled.")
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(src)

set(CPACK_PACKAGE_NAME "CMakePlayground")
set(CPACK_PACKAGE_DESCRIPTION "A small CMake playground application")
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_PACKAGE_CONTACT "meteor.kiwi-0i@icloud.com")
set(CPACK_PACKAGE_VENDOR "Lukas Obermeier")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A small CMake playground application")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
set(CPACK_GENERATOR External)
set(CPACK_EXTERNAL_PACKAGE_SCRIPT ${CMAKE_SOURCE_DIR}/extern/cpack-conan/CPackConan.cmake)

set(CPACK_EXTERNAL_ENABLE_STAGING ON)

set(CPACK_CONAN_COMPONENT_INSTALL ON)
set(CPACK_CONAN_PACKAGE_GENERATORS CMakeConfigDeps)
set(CPACK_CONAN_PACKAGE_SETTINGS os compiler build_type arch)
set(CPACK_CONAN_EXE_PACKAGE_REQUIRES cli11/2.6.2)
set(CPACK_CONAN_PACKAGE_LICENSE MIT)

if(WIN32)
    set(CPACK_GENERATOR ${CPACK_GENERATOR};NSIS;ZIP)
    set(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_NAME}")
    set(CPACK_NSIS_CONTACT "${CPACK_PACKAGE_CONTACT}")
elseif(APPLE)
    set(CPACK_GENERATOR ${CPACK_GENERATOR};DragNDrop;ZIP)
    set(CPACK_BUNDLE_NAME "${CPACK_PACKAGE_NAME}")
    set(CPACK_DMG_VOLUME_NAME "${CPACK_PACKAGE_NAME}")
    set(CPACK_DMG_FORMAT "UDZO")
    set(CPACK_DMG_DROP_LINK "Applications")
elseif(UNIX AND NOT APPLE)
    set(CPACK_GENERATOR ${CPACK_GENERATOR};DEB;TGZ)
    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_CONTACT}")
    set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
    set(CPACK_DEBIAN_ARCHITECTURE "${CMAKE_SYSTEM_PROCESSOR}")
endif()

include(CPack)
