project(CommonUtilsCli)

find_package(CLI11 REQUIRED)

add_executable(${PROJECT_NAME})

target_sources(${PROJECT_NAME}
    PRIVATE
    src/main.cpp
)

target_link_libraries(${PROJECT_NAME} PRIVATE StringUtils CLI11::CLI11)

set_target_properties(${PROJECT_NAME} PROPERTIES
    VERSION ${VERSION_FULL}
    SOVERSION ${VERSION_MAJOR}
    INTERFACE_${PROJECT_NAME}_MAJOR_VERSION ${VERSION_MAJOR}
)
set_property(TARGET ${PROJECT_NAME} APPEND PROPERTY
    COMPATIBLE_INTERFACE_STRING ${PROJECT_NAME}_MAJOR_VERSION
)

install(TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
    FILE_SET HEADERS DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Development
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(EXPORT ${PROJECT_NAME}Targets
    FILE CommonUtils${PROJECT_NAME}Targets.cmake
    NAMESPACE o_lukas::
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/CommonUtils
    COMPONENT Development
)

install(FILES "${CMAKE_SOURCE_DIR}/LICENSE"
    DESTINATION ${CMAKE_INSTALL_DOCDIR} COMPONENT Runtime
)
