project(MathUtils)

add_library(${PROJECT_NAME})
add_library(o_lukas::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

target_sources(${PROJECT_NAME}
    PRIVATE
    src/MathUtil.cpp

    PUBLIC
    FILE_SET HEADERS
    BASE_DIRS include
    FILES
    include/o-lukas/MathUtils/MathUtil.hpp
)

target_include_directories(${PROJECT_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

generate_export_header(${PROJECT_NAME}
    BASE_NAME MATH_UTILS
    EXPORT_FILE_NAME include/o-lukas/${PROJECT_NAME}/Export.hpp
)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/include/o-lukas/${PROJECT_NAME}/Export.hpp
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/o-lukas/${PROJECT_NAME}
    COMPONENT Development
)

set_target_properties(${PROJECT_NAME} PROPERTIES
    VERSION ${VERSION_FULL}
    SOVERSION ${VERSION_MAJOR}
    INTERFACE_${PROJECT_NAME}_MAJOR_VERSION ${VERSION_MAJOR}
)
set_property(TARGET ${PROJECT_NAME} APPEND PROPERTY
    COMPATIBLE_INTERFACE_STRING ${PROJECT_NAME}_MAJOR_VERSION
)

install(TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} NAMELINK_COMPONENT Development
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
    FILE_SET HEADERS DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Development
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(EXPORT ${PROJECT_NAME}Targets
    FILE CommonUtils${PROJECT_NAME}Targets.cmake
    NAMESPACE o_lukas::
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/CommonUtils
    COMPONENT Development
)

install(FILES "${CMAKE_SOURCE_DIR}/LICENSE"
    DESTINATION ${CMAKE_INSTALL_DOCDIR} COMPONENT Development
)

add_subdirectory(test)
